--- a/p3/config/k3d.yaml
+++ b/p3/config/k3d.yaml
@@ -2,7 +2,7 @@ apiVersion: k3d.io/v1alpha3
 kind: Simple
 name: dev-cluster
 servers: 1
-agents: 2
+# agents: 2
 ports:
   - port: 8080:80
     nodeFilters:
