--- a/p3/config/ingress.yaml
+++ b/p3/config/ingress.yaml
@@ -5,22 +5,10 @@ metadata:
   namespace: argocd
 spec:
   entryPoints:
-    - websecure
-    - web
+  - web
   routes:
-    - kind: Rule
-      match: Host(`argocd.example.com`)
-      priority: 10
-      services:
-        - name: argocd-server
-          port: 80
-    - kind: Rule
-      match: Host(`argocd.example.com`) && Headers(`Content-Type`, `application/grpc`)
-      priority: 11
-      services:
-        - name: argocd-server
-          port: 80
-          scheme: h2c
-  tls:
-    certResolver: default
-    options: {}
+  - kind: Rule
+    match: PathPrefix(`/`)
+    services:
+    - name: argocd-server
+      port: 8080
