--- a/p3/config/ingress.yaml
+++ b/p3/config/ingress.yaml
@@ -10,7 +10,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /argocd
+      - path: /
         backend:
           serviceName: argocd-server
           servicePort: 80
