ch: rename app repository

--- a/p3/config/wils-Application.yaml
+++ b/p3/config/wils-Application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/karimstm/iot-temp-deployment.git
+    repoURL: https://github.com/karimstm/amoutik.git
     targetRevision: HEAD
     path: k3s
   destination:
